# Js-to-LVGL

./: README.md  main.py  util.py
lvgl/: CMakeLists.txt  build.sh  lv_conf.h  lv_drv_conf.h  main.c  tick.h
lvgl/web_snapshot/: index.html
lvgl/web_snapshot/js/: app.js
web/: index.html
web/js/: app.js
